# bayes-learner

./: EXPERIMENT_PLAN.md  PARAMETERS.md  POSTERIORS.md  README.md  RESEARCH_QUESTION.md  SUMMARY.md  pyproject.toml
reports/: 202603091352_two_var_posteriors.md  202603091353_and_or_graph.md  202603091437_chain_three_variables.md  202603091458_chain_three_variables_two_neighbor.md  202603091742_dating_graph_qbbn.md  exp001_two_var_posteriors.md
src/bayes_learner/cli/: client.py  main.py
src/bayes_learner/cli/commands/: health.py  train.py
src/bayes_learner/core/: graph.py  inspect.py  model.py  trainer.py
src/bayes_learner/core/graphs/: __init__.py  exp001.py  exp002.py  exp003.py  exp004.py  exp005.py
src/bayes_learner/server/: main.py
src/bayes_learner/server/routes/: health.py  train.py
