[project]
name = "bayes-learner"
version = "0.1.0"
description = "Empirical Bayesian inference learner — does gradient descent find BP weights?"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0,<2.10.0",
    "rich>=13.0.0",
]

[project.scripts]
bayes-learner = "bayes_learner.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bayes_learner"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]